[package]
name = "pulseox-firmware"
version = "0.1.0"
authors = ["jpenalozaa"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "pulseox-firmware"
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
max3010x = "0.2.0"
nb = "1.1.0"
panic-halt = "1.0.0"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
ufmt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
